	* ilut_win32:102: Added ILboolean typecast.
	* il_jpeg.c:987: Commented out pragma warning at the end.
	* il_mng.c: Added #pragma warning at the top to get rid of redefinition warning when compiling.
	* il_nvidia.cpp (ilNVidiaCompressDXT): Added check for Data being NULL.
	* ilut_win32.c (ilutConvertSliceToHBitmap): Fixed bug #2496509 - added line 117 and
	added DataSize member.
	* il_hdr.c (iGetHdrHead): Fixed bug #2496518 - Added check for count.  Changed
	sscanf to use %2s format specifier to prevent buffer overruns in x and y.
	* il_pnm.c (iGetWord): Fixed bug mentioned in #2496518 - igetc was moved back
	into the while loop.  Added a check for WordPos to prevent buffer overflow.
	Restructured the while loop to work properly.
	* il_convert.c (iConvertPalette): Changed references of iCurImage to Image.
	* il_gif.c (GifGetData): Added DataPtr and changed line 636 to use Data instead of Image->Data.
	* il_gif.c (iGetPalette / GetImages): Changed to better deal with local palettes.
	
2009-01-10 Matěj Týč <bubla@sf.net>
	* m4/devil-definitions.m4, m4/devil-reports.m4: Added a report saying
	what libraries were linked with DevIL (should be helpful to packagers
	who need to know DevIL dependencies)
	* il_endian.h (iGwapUShort/iSwapUInt): Finished fixing bug #2023453
	(inline GCC asm, there was a typo left)
	* src_IL/src/il_tiff.c (ilSaveTiff): Fixed a typo that was causing
	confilicting declarations error
	* configure.ac:264: Added IL_NO_WBMP since the Wbmp loading functions
	that are referenced, but not implemented, caused linking errors

2009-01-11 Denton Woods <doomwiz@users.sf.net>
	* MSVC9 Unicode projects: Updated to work better in 64-bit Windows.
	* il_vtf.c: Removed commented lines 238-242.
	* Created application to copy DLL files to the System32 directory.
	
2009-01-12 Denton Woods <doomwiz@users.sf.net>
	* ilut_directx9.c: Cleared up formatting some.

2009-01-15 Denton Woods <doomwiz@users.sf.net>
	* il_manip.c / il.h: Added ilClampNTSC function.